dnl Process this file with autoconf to produce a configure script.

dnl Copyright 1997 Lucent Technologies, all rights reserved
AC_INIT(rtp_api.c)

AM_INIT_AUTOMAKE(rtplib, 1.0a1, "")
dnl This seems to be an automake bug?  Work around.
AC_SUBST(LOCALDIR, "")

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

if [[ "x$GCC" = "xyes" ]]; then
  CFLAGS="$CFLAGS -W -Wall -Wmissing-prototypes -Wstrict-prototypes -DPROTOTYPES"
fi

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostname)
AC_CHECK_LIB(socket, socket)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h stdlib.h string.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_HEADER_TIME
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(gethostname gettimeofday select socket uname snprintf vsnprintf)
AC_REPLACE_FUNCS(strerror)

AC_OUTPUT(Makefile)
